--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.1.2",
+    "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
     "bootstrap": "^4.1.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
     "uuid": "^3.3.2"
   },
